Refactor project to use only MVC, remove Razor Pages

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Shitmaps - Bathroom Experience Map";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Shitmaps</h1>
+    <p>Welcome to the platform where you can document your bathroom experiences at businesses.</p>
+    <p><a href="/map">Go to the Map</a></p> <!-- Example of link to another page or functionality -->
+
+    <!-- You can add more dynamic content or sections here -->
 </div>
