--- a/Views/Home/Map.cshtml
+++ b/Views/Home/Map.cshtml
@@ -14,3 +14,4 @@
         .bindPopup("<b>Hello world!</b><br />I am a popup.")
         .openPopup();
 </script>
+<script src="~/js/map.js"></script>
